--- a/todoList/templates/todo/index.html
+++ b/todoList/templates/todo/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col">
                 <iframe src="https://giphy.com/embed/l4pTqyJ8XMhLZ3ScE" width="250" height="250" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
