--- a/todoList/templates/todo/index.html
+++ b/todoList/templates/todo/index.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet"  href="{%  static  'css/style.css' now "U" %}">
-    <title>TODO App</title>
+    <title>ToDo App</title>
 </head>
 <body>
     
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <iframe src="https://giphy.com/embed/l4pTqyJ8XMhLZ3ScE" width="250" height="250" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                
+                <iframe src="https://giphy.com/embed/l4pTqyJ8XMhLZ3ScE" width="350" height="350" frameBorder="0" class="giphy-embed" allowFullScreen
+                ></iframe>
+            
             </div>
             
-            <div class="col">
+            <div class="col-9" >
                 <h1>ToDo List</h1>
                 <div class="input-group input-group-sm mb-3">
                     
-                    <input type="text" class="form-control outline-secondary" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"
+                    <input type="text" dasdclass="form-control outline-secondary" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"
                     placeholder="Busca tus notas">
                     
                   </div>
@@ -28,6 +31,9 @@
                     <a class="agregarTarea" href="">
                         + Agrega una tarea
                     </a> 
+                </div>
+                <div class="row" id="tareas">
+                    
                 </div>
             </div>
         </div>
