--- a/todoList/templates/todo/index.html
+++ b/todoList/templates/todo/index.html
@@ -33,7 +33,9 @@
                     </a> 
                 </div>
                 <div class="row" id="tareas">
-                    
+                    {% for i in tasks %}
+                       <p> {{i}} </p> <button>Eliminar</button>
+                    {% endfor %}
                 </div>
             </div>
         </div>
