--- a/todoList/templates/todo/index.html
+++ b/todoList/templates/todo/index.html
@@ -33,8 +33,8 @@
                     </a> 
                 </div>
                 <div class="row" id="tareas">
-                    {% for i in tasks %}
-                       <p> {{i}} </p> <button>Eliminar</button>
+                    {% for task in tasks %}
+                       <p> {{task.content_text}} <button type="button" class="btn btn-danger ">X</button></p> 
                     {% endfor %}
                 </div>
             </div>
