--- a/todoList/static/css/style.css
+++ b/todoList/static/css/style.css
@@ -8,7 +8,7 @@ body{
     background-color: #69B794 ;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    
+    font-family: 'Poppins', sans-serif;
     
 }
 
